--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-helloworld
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Sayfa Örneği</title>
+</head>
+<body>
+
+    <header>
+        <h1>Merhaba, HTML Dünyası!</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Ana Sayfa</a></li>
+            <li><a href="#">Hakkımızda</a></li>
+            <li><a href="#">İletişim</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Biz Kimiz?</h2>
+            <p>HTML öğreniyorsunuz ve bu harika! Biz de HTML hakkında bir şeyler biliyoruz.</p>
+        </section>
+
+        <section>
+            <h2>Görsel Öğe</h2>
+            <img src="resim.jpg" alt="Harika Bir Resim">
+        </section>
+
+        <section>
+            <h2>Faydalı Bir Bağlantı</h2>
+            <p>HTML öğrenme sürecinizi geliştirmek için <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>'u ziyaret edebilirsiniz.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 HTML Sayfa Örneği</p>
+    </footer>
+
+</body>
+</html>
