--- a/index.html
+++ b/index.html
@@ -1,44 +1,17 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Sayfa Örneği</title>
-</head>
-<body>
-
-    <header>
-        <h1>Merhaba, HTML Dünyası!</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#">Ana Sayfa</a></li>
-            <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">İletişim</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section>
-            <h2>Biz Kimiz?</h2>
-            <p>HTML öğreniyorsunuz ve bu harika! Biz de HTML hakkında bir şeyler biliyoruz.</p>
-        </section>
-
-        <section>
-            <h2>Görsel Öğe</h2>
-            <img src="resim.jpg" alt="Harika Bir Resim">
-        </section>
-
-        <section>
-            <h2>Faydalı Bir Bağlantı</h2>
-            <p>HTML öğrenme sürecinizi geliştirmek için <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>'u ziyaret edebilirsiniz.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 HTML Sayfa Örneği</p>
-    </footer>
-
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Başlık Etiketleri</title>
+  </head>
+  <body>
+    <h1>Burası Başlık h1</h1>
+    <h2>Burası Başlık h2</h2>
+    <h3>Burası Başlık h3</h3>
+    <h4>Burası Başlık h4</h4>
+    <h5>Burası Başlık h5</h5>
+    <h6>Burası Başlık h6</h6>
+  </body>
 </html>
